[gd_scene load_steps=4 format=3 uid="uid://dy2esm4akhav1"]

[ext_resource type="Texture2D" uid="uid://bw3amxscqygqq" path="res://assets/naveena/background_scaled.png" id="1_13sth"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_h57g0"]
[ext_resource type="FontFile" uid="uid://cfrp63w0hyxlv" path="res://assets/MathewCarter/Charter Regular.ttf" id="2_wecwr"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_h57g0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("1_13sth")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeElapsed" type="Label" parent="TextureRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Time elapsed: 0 s"
vertical_alignment = 1

[node name="EnemiesRemaining" type="Label" parent="TextureRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Enemies remaining: 0"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Dash" type="Label" parent="TextureRect/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Dash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shotgun" type="Label" parent="TextureRect/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Shotgun"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HudUpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="HudUpdateTimer" to="." method="_on_hud_update_timer_timeout"]
